@@ -18,46 +18,54 @@ package com.echothree.control.user.warehouse.server.command;
 
 import com.echothree.control.user.warehouse.common.form.GetWarehouseTypesForm;
 import com.echothree.control.user.warehouse.common.result.WarehouseResultFactory;
-import com.echothree.model.control.warehouse.server.control.WarehouseControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.control.warehouse.server.control.WarehouseControl;
 import com.echothree.model.data.warehouse.server.entity.WarehouseType;
 import com.echothree.model.data.warehouse.server.factory.WarehouseTypeFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWarehouseTypesCommand
-        extends BaseMultipleEntitiesCommand<WarehouseType, GetWarehouseTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<WarehouseType, GetWarehouseTypesForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.WarehouseType.name(), SecurityRoles.List.name())
-                )))
-        )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetWarehouseTypesCommand */
     public GetWarehouseTypesCommand() {
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var warehouseControl = Session.getModelController(WarehouseControl.class);
+
+        return warehouseControl.countWarehouseTypes();
     }
 
     @Override
@@ -75,7 +83,7 @@ public class GetWarehouseTypesCommand
             var warehouseControl = Session.getModelController(WarehouseControl.class);
 
             if(session.hasLimit(WarehouseTypeFactory.class)) {
-                result.setWarehouseTypeCount(warehouseControl.countWarehouseTypes());
+                result.setWarehouseTypeCount(getTotalEntities());
             }
 
             result.setWarehouseTypes(warehouseControl.getWarehouseTypeTransfers(getUserVisit(), entities));
